tests/errors/already-bound.fil
import "primitives/core.fil";

comp main<@G: 1>() -> () {
    A := new Add[32];
    A := new Add[16];
}