tests/errors/already-bound.expect
---CODE---
1
---STDERR---
error: name `A' is already bound by instance
  ┌─ tests/errors/already-bound.fil:5:5
  │
4 │     A := new Add[32];
  │     ----------------- previous binding
5 │     A := new Add[16];
  │     ^ name is already bound

Compilation failed with 1 errors.
